# kpi-hydro-acoustic

./: README.md
Backend/: pyproject.toml  scripts.py  temp.py
Backend/data/: available_functions.json  json_structure.md  plan.md
Backend/functions/: utils.py
Backend/information/: example_of_request.json  function_info_structure.md  request_structure.md
Backend/routers/: debug.py  help.py
Backend/server/: main.py
Backend/server/functions/: data_classes.py  functions.py  utils.py
Backend/server/routers/: debug.py  function_call.py  help.py
Backend/test/: test_selenium.py
Backend/test/Bruno workplace/server hydroacoustics analysis/: collection.bru
Backend/test/Bruno workplace/server hydroacoustics analysis/call_functions/: Get number test.bru  Pipeline.bru
Backend/test/Bruno workplace/server hydroacoustics analysis/debug/: Get number test.bru
Backend/test/Bruno workplace/server hydroacoustics analysis/help/: Get_schema.bru
Backend/test/REST client/server hydroacoustics analysis/: bruno.json
Backend/test/REST client/server hydroacoustics analysis/call_functions/: Pipeline.bru
Backend/test/REST client/server hydroacoustics analysis/debug/: Play audio test.bru
Backend/test/REST client/server hydroacoustics analysis/help/: Get number test.bru  get_schema.bru
Backend/test/REST clients/bruno/: server hydroacoustics analysis.json
Backend/test/REST clients/postman/: server hydroacoustics analysis.json
Backend/test/unit_tests/: test_server.py
Web UI/: eslint.config.js  index.html  package-lock.json  package.json
Web UI/src/: App.tsx  index.css  main.tsx
Web UI/src/components/Header/: Header.tsx  HeaderNavigation.tsx
Web UI/src/components/Modal/: Modal.module.css  Modal.tsx
Web UI/src/components/icons/: CloseIcon.tsx  FileInputIcon.tsx  MenuIcon.tsx  PlusIcon.tsx  SelectOpenIcon.tsx  SendIcon.tsx
Web UI/src/errors/: fileErrors.ts  pipelineErrors.ts
Web UI/src/hooks/: useFileInput.ts  usePipeline.ts  useTimeBounds.ts
Web UI/src/layouts/: LayoutWithHeader.tsx
Web UI/src/pages/: AboutPage.tsx  AddFile.tsx  DownloadResult.tsx  DownloadResultPage.tsx  PipelinePage.tsx  index.ts
Web UI/src/store/: loadedFileSlice.ts  pipelineApi.ts  store.ts
(+15 files in other folders)
