[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.12.5"
granian = {extras = ["reload"], version = "^1.6.4"}
fastapi = {extras = ["standard"], version = "^0.115.6"}
numpy = "^2.1.3"
scipy = "^1.14.1"
setuptools = "^75.6.0"
wheel = "^0.45.1"
noisereduce = "^3.0.3"
matplotlib = "^3.9.4"


[tool.poetry.group.dev.dependencies]
pygame = "^2.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
selenium = "^4.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_dev         = "scripts:start_server_dev"
run             = "scripts:start_server_prod"
run_test_web    = "scripts:start_test_web_selenium"
run_test_server = "scripts:start_test_server"